gcc-14.2.0/gcc/testsuite/gdc.test/runnable/interface3.d
version https://git-lfs.github.com/spec/v1
oid sha256:78fe648845bf6d2759649885762f818f883c12841f0c25d394bced3ed0620d96
size 1084
