gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/ice11856_0.d
version https://git-lfs.github.com/spec/v1
oid sha256:8f04bd5e7f0595e539be62b2f1e3b72f35fa3f3c0733f8c5e57edbea7ef66034
size 532
